--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
   "devDependencies": {
     "@bigcommerce/checkout-sdk": "git+ssh://git@github.com/bigcommerce/checkout-sdk-js.git",
     "accounting": "^0.4.1",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "lodash": "^4.17.5",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "lodash": "^4.17.10",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-text-mask": "^5.4.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
