--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/bigcommerce/checkout-sdk-js-example",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "transpile": "webpack"
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@bigcommerce/checkout-sdk": "git+ssh://git@github.com/bigcommerce/checkout-sdk-js.git",
@@ -31,10 +31,15 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.11",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-text-mask": "^5.4.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   }
